src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_time_Response_date_entering_nudge__c</fullName>
        <formula>If( First_call_held__c =0,if( ISBLANK(Date_entering_SQL_Nudge_workflow__c),0, Date_entering_SQL_Nudge_workflow__c  -  Response_Date__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead time Response date &amp; entering nudge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_time_Response_date_to_1st_call_date__c</fullName>
        <formula>IF(  First_call_held__c =1 ,  First_Call_Date__c- Response_Date__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead time Response date to 1st call date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_time_Response_date_to_Ops__c</fullName>
        <formula>IF( Converted_to_Opp__c =1 , SQL_to_ops_lead_time__c  - Time_to_first_response_from_Became_SQL__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead time Response date to Ops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_time_between_1st_call_and_conversio__c</fullName>
        <formula>if( First_call_held__c =1,if(AND(ISBLANK ( Earliest_date_of_conversion_to_Arch_N_I__c ), ISBLANK(Earliest_date_of_conversion_to_P_F__c)),First_Call_Date__c  - Earliest_date_conv_to_contact_or_opp__c,
if (AND(ISBLANK ( Earliest_date_of_conversion_to_Arch_N_I__c ), ISBLANK(Earliest_date_conv_to_contact_or_opp__c)),First_Call_Date__c  -Earliest_date_of_conversion_to_P_F__c,
if((AND(ISBLANK (Earliest_date_of_conversion_to_P_F__c), ISBLANK(Earliest_date_conv_to_contact_or_opp__c))), First_Call_Date__c  - Earliest_date_of_conversion_to_Arch_N_I__c,
if( AND(Earliest_date_of_conversion_to_Arch_N_I__c &lt; Earliest_date_of_conversion_to_P_F__c, Earliest_date_of_conversion_to_Arch_N_I__c &lt;Earliest_date_conv_to_contact_or_opp__c), First_Call_Date__c  -   Earliest_date_of_conversion_to_Arch_N_I__c,
if( AND(Earliest_date_of_conversion_to_P_F__c &lt; Earliest_date_of_conversion_to_Arch_N_I__c, Earliest_date_of_conversion_to_P_F__c &lt;Earliest_date_conv_to_contact_or_opp__c), First_Call_Date__c  - Earliest_date_of_conversion_to_P_F__c,if( AND(Earliest_date_conv_to_contact_or_opp__c &lt; Earliest_date_of_conversion_to_Arch_N_I__c, Earliest_date_conv_to_contact_or_opp__c &lt;Earliest_date_of_conversion_to_P_F__c), First_Call_Date__c  - Earliest_date_conv_to_contact_or_opp__c, Days_w_o_Activity__c )))))),Days_w_o_Activity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead time between 1st call and conversio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likely_Candidate__c</fullName>
        <description>Syncing with Hubspot field - Indicating that this lead&apos;s first website page visit was a Career Page and is very likely a candidate</description>
        <inlineHelpText>Syncing with Hubspot field - Indicating that this lead&apos;s first website page visit was a Career Page and is very likely a candidate</inlineHelpText>
        <label>Likely Candidate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Date_Created_in_CCHQ__c</fullName>
        <formula>RIGHT(LEFT( HubSpot_Date_Created_in_CCHQ__c , 7),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Date Created in CCHQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_activity_date_after_1st_no_show__c</fullName>
        <formula>If(ISBLANK( Date_of_First_No_Show__c ),&quot;&quot;,if( Date_of_First_No_Show__c &lt; Hubspot_Next_Activity_Date__c ,&quot;yes&quot;,&quot;no&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next activity date after 1st no show</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_time_contact_failed_qual_proc__c</fullName>
        <description>Field set by Hubspot Workflow. Incremented by 1 each time the SQL fails to respect the Qualifying process</description>
        <inlineHelpText>Field set by Hubspot Workflow. Incremented by 1 each time the SQL fails to respect the Qualifying process</inlineHelpText>
        <label># time contact failed Qualif process</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Business_Unit_Name__c</fullName>
        <description>Record Owner&apos;s Business Unit Name - populated through SFDC Employee record.</description>
        <formula>Owner:User.Business_Unit_Name__c</formula>
        <label>Lead Owner (BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Ad_Lead__c</fullName>
        <description>Tagged as Yes through a Hubspot workflow if they clicked on any Paid Ads (Blank otherwise) (Note: As of Feb 1st 2018, this won&apos;t include the Leads that would have already become an SQL / For before Feb 1st, it might include some pre-existing SQL, but we think the number is very minimal and ok to ignore)</description>
        <inlineHelpText>Tagged as Yes through a Hubspot workflow if they clicked on any Paid Ads (Blank otherwise)</inlineHelpText>
        <label>Paid Ad Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_number_from_Sign_up__c</fullName>
        <description>Phone number entered in the Created account form on CCHQ (Sync with Hubspot field)</description>
        <inlineHelpText>Phone number entered in the Created account form on CCHQ (Sync with Hubspot field)</inlineHelpText>
        <label>Phone number from Sign-up</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Budget__c</fullName>
        <description>Best Guess at Software Plan</description>
        <inlineHelpText>Best Guess at Software Plan</inlineHelpText>
        <label>Plan Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Pro</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Candidate__c</fullName>
        <description>Syncing with Hubspot field - Indicating that this lead has ever visited one of our career/job posting website page and is potentially (not certain) a candidate</description>
        <inlineHelpText>Syncing with Hubspot field - Indicating that this lead has ever visited one of our career/job posting website page and is potentially (not certain) a candidate</inlineHelpText>
        <label>Potential Candidate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Title__c</fullName>
        <description>This is the title of a paper the lead has published.</description>
        <inlineHelpText>This is the title of a paper the lead has published.</inlineHelpText>
        <label>Publication Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publication_URL__c</fullName>
        <description>The URL to the publication</description>
        <inlineHelpText>The URL to the publication</inlineHelpText>
        <label>Publication URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Qualifying_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the lead has clear authority for a sale.</description>
        <inlineHelpText>Check this box if the lead has clear authority for a sale.</inlineHelpText>
        <label>Qualifying - Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Authority_notes__c</fullName>
        <description>Questions to ask - &quot;In addition to yourself, who else at your company is facing these problems? Are there any issues that they might be concerned with? What is your purchasing process?&quot;</description>
        <inlineHelpText>Use this field to track open questions about Authority.</inlineHelpText>
        <label>Qualifying - Authority notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the lead has clear budget available for a service or product. If they don&apos;t have budget or it is unclear, leave unchecked and put notes in the text field.</description>
        <inlineHelpText>Check this box if the lead has clear budget available for a service or product. If they don&apos;t have budget or it is unclear, leave unchecked and put notes in the text field.</inlineHelpText>
        <label>Qualifying - Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Budget_notes__c</fullName>
        <description>Describe any notes about budget, and any open questions to be answered. E.g. &quot;Are you responsible for establishing budget?  Do you have budget allocated?  Ideally, what are you looking to invest?&quot;</description>
        <inlineHelpText>Describe any notes about budget, and any open questions to be answered. E.g. &quot;Are you responsible for establishing budget?  Do you have budget allocated?  Ideally, what are you looking to invest?&quot;</inlineHelpText>
        <label>Qualifying - Budget notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Need__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the lead has clear need (business pain or challenges that CommCare solves).</description>
        <inlineHelpText>Check this box if the lead has clear need (business pain or challenges that CommCare solves).</inlineHelpText>
        <label>Qualifying - Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Need_notes__c</fullName>
        <description>Notes / open questions about the challenge the lead sees and fit with CommCare.</description>
        <inlineHelpText>Notes / open questions about the challenge the lead sees and fit with CommCare.</inlineHelpText>
        <label>Qualifying - Need notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the timeline is clear and less than 6 months away.</description>
        <inlineHelpText>Check this box if the timeline is clear and less than 6 months away.</inlineHelpText>
        <label>Qualifying - Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Timeline_notes__c</fullName>
        <description>Use this field to track notes / open questions about timeline.</description>
        <inlineHelpText>Use this field to track notes / open questions about timeline.</inlineHelpText>
        <label>Qualifying - Timeline notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <description>Good Outcome - we were able to connect and either convert or has a potential opp in the future.
Not yet contacted / Still in process - they are in the process of receiving emails but haven&apos;t responded yet.
Good  fit - bad outcome - They never responded or stopped responding and have a high Hubspot score
Weak fit - bad outcome - They never responded or stopped responding and have a low Hubspot score
Bad fit - they contacted us for a speaking engagement or spam, etc.
Excluded - invited users, contacts on existing opps
Uncategorized - catchall</description>
        <formula>if(ispickval(Lead_Status_Reason__c, &quot;Invited user&quot;), &quot;2 Excluded&quot;, 
CASE(Status, 
&quot;Working - Talking&quot;, 
  CASE(Lead_Status_Reason__c, 
&quot;Working - No show reminder #1&quot;, &quot;5c Working - Nudge&quot;,
&quot;Working - No show reminder #2&quot;, &quot;5c Working - Nudge&quot;,
&quot;Working - No show reminder #3&quot;, &quot;5c Working - Nudge&quot;,
&quot;Working - Nudge #1&quot;, &quot;5c Working - Nudge&quot;,
&quot;Working - Nudge #2&quot;, &quot;5c Working - Nudge&quot;,
&quot;Working - Nudge #3&quot;, &quot;5c Working - Nudge&quot;,
&quot;Working - Nudge #4&quot;, &quot;5c Working - Nudge&quot;,
&quot;5b Working - Talking&quot;
),
&quot;Converted&quot;, &quot;8 Converted to Opportunity&quot;, 
&quot;Converting to contact - not an opp&quot;, &quot;2 Excluded&quot;, 
&quot;Passive &amp; Friendly&quot;, 
CASE(Lead_Status_Reason__c, 
&quot;Opportunity identified but timeline &gt; 6 months out&quot;, &quot;7 Good Outcome&quot;, 
&quot;No opportunity identified yet&quot;, &quot;7 Good Outcome&quot;, 
&quot;Former Dimagier&quot;, &quot;7 Good Outcome&quot;, 
&quot;Stopped responding&quot;, 
IF( Hubspot__c &gt; 250, &quot;6 Good Fit – Bad Outcome&quot;, &quot;4 Weak Fit – Bad Outcome&quot;), 
&quot;Self-start on Community Edition&quot;, 
IF( Hubspot__c &gt; 250, &quot;6 Good Fit – Bad Outcome&quot;, &quot;4 Weak Fit – Bad Outcome&quot;), 
&quot;Stopped Responding after P&amp;F Nurture&quot;,
IF( Hubspot__c &gt; 250, &quot;6 Good Fit – Bad Outcome&quot;, &quot;4 Weak Fit – Bad Outcome&quot;),
&quot;No response&quot;, 
IF( Hubspot__c &gt; 250, &quot;6 Good Fit – Bad Outcome&quot;, &quot;4 Weak Fit – Bad Outcome&quot;), 
&quot;Partner program&quot;, &quot;6 Good Fit – Bad Outcome&quot;, 
&quot;Decided to use another solution&quot;, &quot;6 Good Fit – Bad Outcome&quot;, 
&quot;Recruiting / Hiring&quot;, &quot;3 Bad Fit&quot;, 
&quot;Speaking request / research&quot;, &quot;3 Bad Fit&quot;, 
&quot;Contact information request&quot;, &quot;3 Bad Fit&quot;, 
&quot;Request for sponsorship&quot;, &quot;3 Bad Fit&quot;, 
&quot;Existing client / project&quot;, &quot;2 Excluded&quot;, 
&quot;Existing opportunity (temporary)&quot;, &quot;2 Excluded&quot;, 
&quot;1 Uncategorized&quot; 
), 
&quot;Working - Contacted&quot;, &quot;5a Working - Contacted&quot;, 
&quot;Pending - Qualified&quot;, &quot;1 Uncategorized&quot;, 
&quot;Archived - Not Interested&quot;, &quot;3 Bad Fit&quot;, 
&quot;1 Uncategorized&quot; 
))</formula>
        <label>Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Support_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Potentially interested in Remote Support Services</description>
        <inlineHelpText>Potentially interested in Remote Support Services</inlineHelpText>
        <label>Remote Support Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Potentially interested in Report Builder</description>
        <inlineHelpText>Potentially interested in Report Builder</inlineHelpText>
        <label>Report Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>The date the lead responded - either email, voice, or other.</description>
        <inlineHelpText>The date the lead responded - either email, voice, or other. (based on when the Lead Status became working-talking)</inlineHelpText>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ryan_Lead_Status_do_not_use__c</fullName>
        <label>Ryan Lead Status (do not use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Working / Talking</fullName>
                </value>
                <value>
                    <fullName>Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>Call #1 Held</fullName>
                </value>
                <value>
                    <fullName>Call #2 Held</fullName>
                </value>
                <value>
                    <fullName>Call #3 Held</fullName>
                </value>
                <value>
                    <fullName>No-show / Reschedule</fullName>
                </value>
                <value>
                    <fullName>Archived / Not interested</fullName>
                </value>
                <value>
                    <fullName>Passive &amp; friendly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_to_ops_lead_time__c</fullName>
        <formula>IF(NOT(ISBLANK( ConvertedDate )) &amp;&amp; NOT(ISBLANK( Became_a_Sales_Qualified_Lead_Date__c )),(((YEAR( ConvertedDate ) -YEAR(DATEVALUE(Became_a_Sales_Qualified_Lead_Date__c )) - 1) *12) + (12 - MONTH(DATEVALUE( Became_a_Sales_Qualified_Lead_Date__c )) +1) + MONTH( ConvertedDate )), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SQL to ops lead time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_for_this_user_on_CommCareHQ__c</fullName>
        <formula>HYPERLINK(&quot;https://www.commcarehq.org/hq/admin/web_user_lookup/?q=&quot;+ Email, &quot;Search for user&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search for this user on CommCareHQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype_Address__c</fullName>
        <description>Skype address for the lead.</description>
        <inlineHelpText>Skype address for the lead.</inlineHelpText>
        <label>Skype Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>Our own tags field because Salesforce tags aren&apos;t very usable.</inlineHelpText>
        <label>Tag</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_to_first_response_from_Became_SQL__c</fullName>
        <description>Time in hours between First Response Date and Became a Sales Qualified Lead</description>
        <formula>Response_Date__c  -  DATEVALUE(Became_a_Sales_Qualified_Lead_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time in hours between First Response Date and Became a Sales Qualified Lead</inlineHelpText>
        <label>Time to first response from Became SQL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>Calculates urgency based on lead creation date.</description>
        <formula>/* checking if became a lead in the current week  */  

/* current week */
IF(

  IF( 
    CEILING( ( TODAY() - DATE( YEAR( TODAY() ), 1, 1) + 1) / 7) &gt; 52,
    52,
    CEILING( ( TODAY() - DATE( YEAR( TODAY() ), 1, 1) + 1) / 7)
  )

  =

  /* week became a lead */

  IF( 
    CEILING( ( DATEVALUE(Became_a_Sales_Qualified_Lead_Date__c) - DATE( YEAR( DATEVALUE (Became_a_Sales_Qualified_Lead_Date__c) ), 1, 1) + 1) / 7) &gt; 52,
    52,
    CEILING( ( DATEVALUE(Became_a_Sales_Qualified_Lead_Date__c)  - DATE( YEAR( DATEVALUE( Became_a_Sales_Qualified_Lead_Date__c ) ), 1, 1) + 1) / 7)
  ),
  1, /* most urgent */
  3  /* least urgent */
)</formula>
        <label>Urgency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Date_Created_in_CCHQ__c</fullName>
        <formula>LEFT( HubSpot_Date_Created_in_CCHQ__c , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Date Created in CCHQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_and_Month_Date_created_in_CCHQ__c</fullName>
        <description>Year and Month this user signed up for the first time to CCHQ (Text field syncing from CCHQ)</description>
        <formula>LEFT( HubSpot_Date_Created_in_CCHQ__c, 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Year and Month this user signed up for the first time to CCHQ (Text field syncing from CCHQ)</inlineHelpText>
        <label>Year and Month Date created in CCHQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If we have existing account (organization, unversity, NGO, etc) information for this Lead, please add here</description>
        <inlineHelpText>If we don&apos;t currently have a relationship with this lead/account, no need to add until we convert lead</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>called_through_PF_Proactive_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Rishabh did call them through the P&amp;F Proactive call process. Blank otherwise</description>
        <inlineHelpText>Checked if Rishabh did call them through the P&amp;F Proactive call process. Blank otherwise</inlineHelpText>
        <label>Called through P&amp;F Proactive Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>city_of_residence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>city of residence</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>country_unverified__c</fullName>
        <description>This field is for storing unverified country information in Salesforce.  This is only for Leads, not contacts.  The expectation is that the country will be verified at or before lead conversion to a contact. HubSpot populates this field from the IP Country field, which is captured from the lead&apos;s source IP address.</description>
        <inlineHelpText>This was formerly the Country Text field, but has been updated to be Country (Unverified)</inlineHelpText>
        <label>Country (Unverified)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dimagi_person_qualifying__c</fullName>
        <description>The name of the Dimagi person assigned to qualify according to the second of lead creation - Even to Carrie, Odd to Ryan</description>
        <formula>&quot;Carrie&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the Dimagi person assigned to qualify according to the second of lead creation - Even to Carrie, Odd to Ryan</inlineHelpText>
        <label>Dimagi Person Qualifying</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_date_SQL_failed_qualifying_process__c</fullName>
        <formula>If(AND(Failed_Qualifying_process_at_least_once__c=True,ISBLANK( symbolic_date_Sql_ever_fail_qualifying__c )),today(),Date(1900,1,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>first date SQL failed qualifying process</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lead_age__c</fullName>
        <formula>IF(IsConverted,ConvertedDate - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lead age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reporting_formula_create_or_SQL_date__c</fullName>
        <formula>BLANKVALUE ( Became_a_Sales_Qualified_Lead_Date__c,  CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reporting_formula_create_or_SQL_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>secondary_email__c</fullName>
        <inlineHelpText>if you are manually entering a lead, only use this if an individual has provided 2.</inlineHelpText>
        <label>secondary email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>symbolic_date_Sql_ever_fail_qualifying__c</fullName>
        <formula>If(Failed_Qualifying_process_at_least_once__c=True,today(),Date(1900,1,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Symbolic date SQL ever fail qualifying</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>time_contact_failed_Sales_Opp_process__c</fullName>
        <description>Automatically filled in by Hubspot workflow. Number of times an Opportunity fails to follow-up the Sales process</description>
        <inlineHelpText>Automatically filled in by Hubspot workflow. Number of times an Opportunity fails to follow-up the Sales process</inlineHelpText>
        <label># time contact failed Sales Opp process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>time_lead_failed_the_no_show_process__c</fullName>
        <description>Automatically filled by Hubspot through workflow. Number of times  no-show hasn&apos;t been reported as a no-show in Salesforce, failing to trigger the automated reminder workflow</description>
        <inlineHelpText>Automatically filled by Hubspot through workflow. Number of times  no-show hasn&apos;t been reported as a no-show in Salesforce, failing to trigger the automated reminder workflow</inlineHelpText>
        <label># time lead failed the no show process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>timestamp_test__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>timestamp test</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>Academic_Leads_for_email_campaign</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Hubspot_HQ_created_account_date__c</columns>
        <columns>Hubspot_SQL_reason__c</columns>
        <columns>account_name__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>.edu</value>
        </filters>
        <label>Academic Leads for email campaign</label>
    </listViews>
    <listViews>
        <fullName>Academic_Review</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>.edu</value>
        </filters>
        <label>Academic Review For 2016 Campaign</label>
    </listViews>
    <listViews>
        <fullName>Academy_blitz_CJ_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>Academy blitz CJ 2016</label>
    </listViews>
    <listViews>
        <fullName>Alex_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Alexandra</value>
        </filters>
        <label>Alex Leads</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Hubspot_SQL_reason__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Unqualified Leads</label>
    </listViews>
</CustomObject>